--- a/index.html
+++ b/index.html
@@ -380,6 +380,21 @@ summary {
 </div>
 <div id="summary-table" class="section level2">
 <h2>Summary Table</h2>
+<pre><code>## # A tibble: 12 x 2
+##    genre               `Number of Movies`
+##    &lt;chr&gt;                            &lt;int&gt;
+##  1 Comedy                             182
+##  2 Adventure                          129
+##  3 Drama                              114
+##  4 Action                              40
+##  5 Thriller/Suspense                   24
+##  6 Romantic Comedy                     23
+##  7 Documentary                         16
+##  8 Musical                             16
+##  9 Western                              7
+## 10 Horror                               6
+## 11 Black Comedy                         3
+## 12 Concert/Performance                  2</code></pre>
 <p>This table shows 10 Disney movies with the average inflation gross income of each movie. Included with this is the genre of each of these movies and the MPAA rating. This demonstrates if the movie genre and the MPAA affects the inflation gross income.</p>
 </div>
 <div id="what-trends-do-we-see-between-the-yearly-gross-of-disney-movies-over-time" class="section level2">
