added new table summary text

--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@ summary {
 </div>
 <div id="summary-table" class="section level2">
 <h2>Summary Table</h2>
+<p>This table was created to show the most popular genres of Disney movies.</p>
 <table>
 <thead>
 <tr class="header">
@@ -438,7 +439,7 @@ summary {
 </tr>
 </tbody>
 </table>
-<p>This table shows 10 Disney movies with the average inflation gross income of each movie. Included with this is the genre of each of these movies and the MPAA rating. This demonstrates if the movie genre and the MPAA affects the inflation gross income.</p>
+<p>The table shows that Comedy, Adventure, and Drama are by far the most common types to Disney movies in this data set.</p>
 </div>
 <div id="what-trends-do-we-see-between-the-yearly-gross-of-disney-movies-over-time" class="section level2">
 <h2>What trends do we see between the yearly gross of Disney movies over time?</h2>
