--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ summary {
 </tr>
 </tbody>
 </table>
-<p>The table shows that Comedy, Adventure, and Drama are by far the most common types to Disney movies in this data set.</p>
+<p>The table shows that Comedy, Adventure, and Drama are by far the most common genres of Disney movies in this data set.</p>
 </div>
 <div id="what-trends-do-we-see-between-the-yearly-gross-of-disney-movies-over-time" class="section level2">
 <h2>What trends do we see between the yearly gross of Disney movies over time?</h2>
